test_suite/tests/ui/unexpected-literal/container.stderr
error: unexpected literal in serde container attribute
 --> $DIR/container.rs:4:9
  |
4 | #[serde("literal")]
  |         ^^^^^^^^^
